<?xml version="1.0"?>
<package >
  <name>node_b</name>
  <version>0.0.0</version>
  <description>The node_b package</description>

  
  <maintainer email="clm@todo.todo">clm</maintainer>


  
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  
  <export>

  </export>
</package>
